cmake_minimum_required(VERSION 3.12)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)
add_executable(CodeC LeetCode/competition/C166.cpp LeetCode/competition/C168.cpp LeetCode/competition/D16.cpp LeetCode/competition/C169.cpp "LeetCode/topic/A653Two Sum IV - Input is a BST.cpp" LeetCode/competition/C170.cpp LeetCode/typicalQuestions/sortArray.cpp LeetCode/competition/C171.cpp LeetCode/competition/C172.cpp)