cmake_minimum_required(VERSION 3.12)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)
add_executable(CodeC LeetCode/competition/C166.cpp LeetCode/competition/C168.cpp LeetCode/competition/D16.cpp LeetCode/competition/C169.cpp "LeetCode/topic/A653Two Sum IV - Input is a BST.cpp" LeetCode/competition/C170.cpp LeetCode/typicalQuestions/sortArray.cpp LeetCode/competition/C171.cpp LeetCode/competition/C172.cpp LeetCode/competition/C173.cpp LeetCode/competition/D18.cpp LeetCode/competition/C174.cpp LeetCode/competition/D19.cpp LeetCode/competition/C175.cpp LeetCode/competition/C176.cpp LeetCode/competition/D20.cpp LeetCode/competition/C177.cpp LeetCode/competition/C178.cpp LeetCode/competition/Node.cpp LeetCode/competition/D21.cpp LeetCode/competition/C179.cpp LeetCode/competition/C180.cpp LeetCode/competition/C181.cpp LeetCode/competition/s.cpp LeetCode/solution/A605.cpp)